2000-03-21  Mikael Djurfeldt  <mdj@thalamus.nada.kth.se>

	* init.c (scm_boot_guile_1): Renamed GUILE_GC_TRIGGER_1 -->
	GUILE_MIN_YIELD_1, GUILE_GC_TRIGGER_2 --> GUILE_MIN_YIELD_2.
	GUILE_MIN_YIELD_X now take *positive* fractions of heap size.

	* gc.c, gc.h (SCM_MIN_YIELD_1, SCM_MIN_YIELD_2,
	min_yield_fraction, min_yield, adjust_min_yield): Renamed from
	SCM_GC_TRIGGER_1, SCM_GC_TRIGGER_2, gc_trigger_fraction,
	gc_trigger, adjust_gc_trigger.

	* gc.c (alloc_some_heap): Further improvement of minimal heap size
	prediction.
	(SCM_MAX): New macro.
	(scm_freelist_t): New field: collected_1. Previous amount of
	collected cells.
	(gc_sweep_freelist_finish): Trigger based on two last values of
	freelist->collected to avoid unnecessary allocation due to
	temporary peaks.
	(SCM_INIT_HEAP_SIZE_1, SCM_GC_TRIGGER_1, SCM_GC_TRIGGER_2):
	Adjusted to 45000 cells, 40% and 40%.  Gives quick startup
	without extra heap allocation.

2000-03-20  Dirk Herrmann  <D.Herrmann@tu-bs.de>

	* numbers.h (SCM_MAKINUM):  The parameter to SCM_MAKINUM should
	already be a C value.  No need to unpack it.

	* numbers.h (scm_long_long2num):  Cast the parameter to scm_bits_t
	if we know it fits into an inum.

	* ramap.c (ramap_rp):  An scm_tc7_[ui]vect object does point to a
	field of long values.  In contrast, SCM_VELTS accesses a field of
	SCM values.

2000-03-20  Mikael Djurfeldt  <mdj@mdj.nada.kth.se>

	* gc.c (scm_gc_stats): Inserted explanation of local_scm_mtrigger
	etc.
	(scm_gc_yield_1): New variable: Holds previous yield.  Used to
	make better judgements.
	(gc_sweep_freelist_finish): Inserted explanation of use of
	gc_trigger.

	* print.h, stacks.h, options.c, options.h: Changed C++
	commentaries to C.

2000-03-20  Dirk Herrmann  <D.Herrmann@tu-bs.de>

	* tags.h (SCM2PTR, PTR2SCM):  Use SCM_PACK / SCM_UNPACK correctly.

	* numbers.h (SCM_INUMP, SCM_MAKINUM, SCM_INUM0, SCM_COMPLEX_REAL,
	SCM_COMPLEX_IMAG, SCM_NUMP, SCM_BDIGITS):  Use SCM_PACK /
	SCM_UNPACK / SCM2PTR correctly.
