@@ -381,15 +381,9 @@ SCM_DEFINE (scm_set_tick_rate, "set-tick-rate", 1, 0, 0,
 "")
 #define FUNC_NAME s_scm_set_tick_rate
 {
-  unsigned int old_n;
-
-
-  SCM_VALIDATE_INUM (1,n);
-
-  old_n = scm_tick_rate;
-
-
-  scm_desired_tick_rate = SCM_UNPACK (SCM_INUM (n));
+  unsigned int old_n = scm_tick_rate;
+  SCM_VALIDATE_INUM (1, n);
+  scm_desired_tick_rate = SCM_INUM (n);
   scm_async_rate = 1 + scm_async_rate - scm_async_clock;
   scm_async_clock = 1;
   return SCM_MAKINUM (old_n);
@@ -404,10 +398,9 @@ SCM_DEFINE (scm_set_switch_rate, "set-switch-rate", 1, 0, 0,
 "")
 #define FUNC_NAME s_scm_set_switch_rate
 {
-  unsigned int old_n;
-  SCM_VALIDATE_INUM (1,n);
-  old_n = scm_switch_rate;
-  scm_desired_switch_rate = SCM_UNPACK (SCM_INUM (n));
+  unsigned int old_n = scm_switch_rate;
+  SCM_VALIDATE_INUM (1, n);
+  scm_desired_switch_rate = SCM_INUM (n);
   scm_async_rate = 1 + scm_async_rate - scm_async_clock;
   scm_async_clock = 1;
   return SCM_MAKINUM (old_n);
